Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long long * LPULONGLONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
BTICardAPI VOID __stdcall BTICard_SwapEndianL(LPULONG value);
BTICardAPI VOID __stdcall BTICard_SwapEndianW(LPUSHORT valuea,LPUSHORT valueb);
BTICardAPI VOID __stdcall BTICard_SwapIfBigEndianL(LPULONG value);
BTICardAPI VOID __stdcall BTICard_SwapIfBigEndianW(LPUSHORT valuea,LPUSHORT valueb);
BTICardAPI VOID __stdcall BTICard_SwapIfLittleEndianL(LPULONG value);
BTICardAPI VOID __stdcall BTICard_SwapIfLittleEndianW(LPUSHORT valuea,LPUSHORT valueb);
BTICardAPI ERRVAL __stdcall BTICard_SysMonClear(HCORE handleval);
BTICardAPI INT __stdcall BTICard_SysMonDACToVal(USHORT dacval,INT rangemin,INT rangemax,USHORT dacval_max,INT scalefactor,HCARD handleval);
BTICardAPI LPCSTR __stdcall BTICard_SysMonDescGet(INT index,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SysMonInit(HCORE handleval);
BTICardAPI INT __stdcall BTICard_SysMonMaxRd(INT index,HCORE handleval);
BTICardAPI INT __stdcall BTICard_SysMonMinRd(INT index,HCORE handleval);
BTICardAPI INT __stdcall BTICard_SysMonNomRd(INT index,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SysMonThresholdGet(BOOL * enable,LPINT min,LPINT max,INT index,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_SysMonThresholdSet(BOOL enable,INT min,INT max,INT index,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_SysMonTypeGet(INT index,HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_SysMonUserStr(INT value,INT index,HCORE handleval);
BTICardAPI INT __stdcall BTICard_SysMonValRd(INT index,HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_SysMonValStr(INT index,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_SysMonValToDAC(INT val,INT rangemin,INT rangemax,USHORT dacval_max,INT scalefactor,HCARD handleval);
BTICardAPI INT __stdcall BTICard_TickTimerStart(INT milliseconds);
BTICardAPI BOOL __stdcall BTICard_TickTimerValid(INT timer);
BTICardAPI ERRVAL __stdcall BTICard_Timer64Rd(LPULONG valueh,LPULONG valuel,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_Timer64Wr(ULONG valueh,ULONG valuel,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_TimerClear(HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_TimerRd(HCORE handleval);
BTICardAPI INT __stdcall BTICard_TimerResolution(INT timerresol,HCORE handleval);
BTICardAPI USHORT __stdcall BTICard_TimerResolutionEx(USHORT timershift,HCORE handleval);
BTICardAPI INT __stdcall BTICard_TimerStatus(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_TimerWr(ULONG value,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftMaxGet(LPULONG driftptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftMaxSet(ULONG drift,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftRd(LPINT driftptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftRelWr(INT drift,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMDriftWr(INT drift,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputDelayCompGet(LPINT delayptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputDelayCompSet(INT delay,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdAuto(INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdGet(LPUSHORT dacval,INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMInputThresholdSet(USHORT dacval,INT pinindex,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIntTrigger(LPULONGLONG timetagptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGControlRd(LPULONG ctrlptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGControlWr(ULONG ctrlval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGYearsRd(LPULONG year,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMIRIGYearsWr(ULONG year,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_TSMJumpThresholdGet(LPULONG drift,LPULONG offset,HCORE handleval);