Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapEndianL@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapEndianL(ref UInt32 value);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapEndianW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapEndianW(ref UInt16 valuea, ref UInt16 valueb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapIfBigEndianL@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapIfBigEndianL(ref UInt32 value);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapIfBigEndianW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapIfBigEndianW(ref UInt16 valuea, ref UInt16 valueb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapIfLittleEndianL@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapIfLittleEndianL(ref UInt32 value);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SwapIfLittleEndianW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_SwapIfLittleEndianW(ref UInt16 valuea, ref UInt16 valueb);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonDACToVal@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonDACToVal(UInt16 dacval, Int32 rangemin, Int32 rangemax, UInt16 dacval_max, Int32 scalefactor, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonDescGet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_SysMonDescGet(Int32 index, IntPtr handleval);
            public static string BTICard_SysMonDescGet(Int32 index, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_SysMonDescGet(index, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonInit@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonInit(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonMaxRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonMaxRd(Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonMinRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonMinRd(Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonNomRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonNomRd(Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonThresholdGet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_SysMonThresholdGet(Int32* enable, ref Int32 min, ref Int32 max, Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonThresholdSet@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonThresholdSet(Int32 enable, Int32 min, Int32 max, Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonTypeGet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_SysMonTypeGet(Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonUserStr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_SysMonUserStr(Int32 value, Int32 index, IntPtr handleval);
            public static string BTICard_SysMonUserStr(Int32 value, Int32 index, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_SysMonUserStr(value, index, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonValRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_SysMonValRd(Int32 index, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonValStr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_SysMonValStr(Int32 index, IntPtr handleval);
            public static string BTICard_SysMonValStr(Int32 index, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_SysMonValStr(index, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_SysMonValToDAC@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_SysMonValToDAC(Int32 val, Int32 rangemin, Int32 rangemax, UInt16 dacval_max, Int32 scalefactor, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TickTimerStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TickTimerStart(Int32 milliseconds);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TickTimerValid@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TickTimerValid(Int32 timer);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Timer64Rd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_Timer64Rd(ref UInt32 valueh, ref UInt32 valuel, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_Timer64Wr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_Timer64Wr(UInt32 valueh, UInt32 valuel, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_TimerClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_TimerRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerResolution@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TimerResolution(Int32 timerresol, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerResolutionEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_TimerResolutionEx(UInt16 timershift, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TimerStatus(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TimerWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_TimerWr(UInt32 value, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMDriftMaxGet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMDriftMaxGet(ref UInt32 driftptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMDriftMaxSet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMDriftMaxSet(UInt32 drift, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMDriftRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMDriftRd(ref Int32 driftptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMDriftRelWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMDriftRelWr(Int32 drift, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMDriftWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMDriftWr(Int32 drift, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMInputDelayCompGet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMInputDelayCompGet(ref Int32 delayptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMInputDelayCompSet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMInputDelayCompSet(Int32 delay, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMInputThresholdAuto@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMInputThresholdAuto(Int32 pinindex, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMInputThresholdGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMInputThresholdGet(ref UInt16 dacval, Int32 pinindex, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMInputThresholdSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMInputThresholdSet(UInt16 dacval, Int32 pinindex, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMIntTrigger@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMIntTrigger(ref UInt64 timetagptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMIRIGControlRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMIRIGControlRd(ref UInt32 ctrlptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMIRIGControlWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMIRIGControlWr(UInt32 ctrlval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMIRIGYearsRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMIRIGYearsRd(ref UInt32 year, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMIRIGYearsWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMIRIGYearsWr(UInt32 year, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_TSMJumpThresholdGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_TSMJumpThresholdGet(ref UInt32 drift, ref UInt32 offset, IntPtr handleval);
